--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
       rel="icon"
       type="image/png"
       sizes="64*64"
-      href="/src/assets/fav.jpg"
+      href="/src/assets/logo.png"
     />
     <link rel="manifest" href="/site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BIKE INDEX</title>
+    <title>الأكاديمية العربية للاتصالات اللاسلكية والاستغاثات البحرية</title>
   </head>
   <body>
     <div id="root"></div>
